--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.cdnfonts.com/css/tt-hoves-pro-trial');
 @import url('clash-grotesk.css');
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 * {
     margin: 0;
@@ -13,6 +14,7 @@
     --font-grande: 'TT Hoves Pro Trial', sans-serif;
     --font-pequena: 'ClashGrotesk-Light', sans-serif;
     --font-menu: 'Montserrat', sans-serif;
+    --font-cards: "Roboto", sans-serif;
     --principal-color: #072442;
     --bg-color: #e4ded7;
     --color-gray1: #3d4143;
@@ -146,7 +148,7 @@ a {
     background-color: var(--principal-color); 
     backdrop-filter: blur(10px); 
     -webkit-backdrop-filter: blur(10px); 
-    box-shadow: 0px 2px 10px 1px rgba(0, 0, 255, .2);
+    box-shadow: 0px 2px 10px 1px rgba(7, 36, 66, 0.15);
 }
 
 /* Logo */
@@ -297,7 +299,7 @@ a {
 
 /*************** INICIO *****/
 .inicio {
-    width: 100vw;
+    width: 100vw;    
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -314,7 +316,7 @@ a {
 }
 
 .container-inicio {
-    width: 25%;
+    width: 30%;
     height: 100%;
     color: var(--color-white);
     display: flex;
@@ -333,7 +335,7 @@ a {
     align-items: center;
     justify-content: center;
     text-align: center;
-    gap: 1rem;
+    gap: .5rem;
 }
 
 .logo-inicio {
@@ -343,12 +345,8 @@ a {
     max-width: 100%;
 }
 
-.destaque-inicio {
-    font-weight: lighter;
-}
-
 .paragrafo-inicio p {
-    font-size: clamp(.8rem, 1vw + .5rem, 2rem);
+    font-size: clamp(1rem, 5vw, 1.6rem);
     max-width: 900px;
     color: var(--principal-color);
     font-family: var(--font-menu);
@@ -419,29 +417,6 @@ a {
     transform: scale(0.95);
 }
 
-.complemento-inicio {
-    position: absolute;
-    bottom: 2rem;
-    width: 100vw;
-    padding: 0rem 1.2rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.complemento-inicio .text {
-    width: 200px;
-}
-
-.complemento-inicio .qr-code {
-    width: 80px;
-    opacity: .2;
-    transition: all .5s ease-in-out;
-}
-
-.qr-code:hover {
-    opacity: 1;
-}
 
 /*************** SOBRE *****/
 .sobre {
@@ -470,7 +445,8 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 3rem;
+    gap: .5rem;
+    padding: .5rem;
 }
 
 .left-sobre {
@@ -479,12 +455,12 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: left;
-    
+    align-items: center;
+    padding: .5rem;    
 }
 
 .textos-sobre p {
-    font-size: clamp(1.8rem, 2.8rem, 2.3rem);
+    font-size: clamp(1rem, 5vw, 1.8rem);
     color: var(--color-destaque1);
     line-height: 1.4;
     letter-spacing: 1.5px;
@@ -493,17 +469,20 @@ a {
 
 .textos-sobre p > span {
     color: #e4ded7;
-    font-size: 3rem;
+    font-size: clamp(1rem, 5vw, 1.8rem);
     font-weight: 900;
 }
 
 .right-sobre {
     width: 50%;
-    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: .5rem;
 }
 
 .textos-sobre-2 > p {
-    font-size: clamp(1.8rem, 2.8rem, 2.3rem);
+    font-size: clamp(1rem, 5vw, 1.8rem);
     color: #e4ded7;
     line-height: 1.4;
     letter-spacing: 1.5px;
@@ -512,7 +491,7 @@ a {
 
 .textos-sobre-2 > p > span {
     color: var(--color-destaque1);
-    font-size: 3rem;
+    font-size: clamp(1rem, 5vw, 1.8rem);
     font-weight: 900;
     
 }
@@ -577,72 +556,62 @@ a {
     text-align: left;
 }
 
-.descricao-servicos {
-    width: 50%;
-    font-size: 2rem;
-    text-align: right;
-    line-height: 1.4;
-    letter-spacing: 1.5px;
-}
 
 .servicos-cards {
     width: 100%;
     height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 2rem;
+    display: flex;  
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
     padding: 2rem 0rem;
 }
 
 .card-servicos {
-    border: 1px solid hsla(0, 0%, 0%, 0.35);
-    max-width: 95%;
-    min-height: 180px;
-    border-radius: 150px;
-    display: flex;
+    width: 300px;
+    height: 300px;
+    display: flex; 
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
-    padding: 2rem;
+    justify-content: center;
+    padding: 1.15rem;
+    background: rgb(201,158,103);
+    background: linear-gradient(180deg, rgba(201,158,103,1) 0%, rgba(195,163,140,1) 50%, rgba(7,36,66,1) 100%);
+    border-radius: 25px;
+    text-align: center;    
 }
 
 .card-servicos-left {
-    margin-left: 5%;
-    border: 1px solid hsla(0, 0%, 0%, 0.35);
-    width: 95%;
-    min-height: 180px;
-    border-radius: 150px;
-    display: flex;
+    width: 300px;
+    height: 300px;
+    display: flex; 
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
-    padding: 2rem;
-    gap: 7%;
+    justify-content: center;
+    padding: 1.15rem;
+    background: rgb(201,158,103);
+    background: linear-gradient(180deg, rgba(201,158,103,1) 0%, rgba(195,163,140,1) 50%, rgba(7,36,66,1) 100%);
+    border-radius: 25px;
+    text-align: center;
 }
+
 
 .card-titulo {
-    width: 68%;
-    font-size: clamp(0.8rem, 2.5vw + .4rem, 2rem);
-    font-family: var(--font-pequena);
-    font-weight: normal;
+    
 }
 
-.card-icon {
-    width: 25%;
-    max-width: 120px;
-    height: 60px;
-    border: 1px solid hsla(0, 0%, 0%, 0.35);
-    border-radius: 100px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.card-titulo > h1 {
+    font-size: clamp(1.5rem, 5vw, 1.8rem);
+    font-family: var(--font-cards);
+    font-weight: 600;
+    margin-bottom: .85rem;
+}
+.card-titulo p {    
+    font-size: clamp(1rem, 5vw, 1.4rem);
+    font-family: var(--font-cards);
 }
 
-.card-icon i {
-    font-size: 2rem;
-    color: var(--color-gray1);
-    margin-bottom: -7px;
-}
 
 /*************** ALGUMA FRASE AQUI  *****/
 .free-your-mind {
