--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,9 +146,9 @@ a {
     z-index: 99;
     transition: top 0.3s ease-in-out;
     background-color: var(--principal-color); 
-    backdrop-filter: blur(10px); 
-    -webkit-backdrop-filter: blur(10px); 
-    box-shadow: 0px 2px 10px 1px rgba(7, 36, 66, 0.15);
+    backdrop-filter: blur(15px); 
+    -webkit-backdrop-filter: blur(15px); 
+    box-shadow: 0px 4px 20px 2px rgba(7, 36, 66, 0.5);
 }
 
 /* Logo */
@@ -417,6 +417,57 @@ a {
     transform: scale(0.95);
 }
 
+.cta-servicos {
+    position: relative;
+    margin: auto;
+    padding: 12px 18px;
+    transition: all 0.2s ease;
+    border: none;
+    background-color: var(--color-destaque1);
+    border-radius: 25px;
+    cursor: pointer;
+}
+
+.cta-servicos span {
+    font-size: clamp(1.2rem, 1.5vw + 1rem, 2rem);
+}
+
+.cta-servicos:before {
+  
+}
+
+.cta-servicos span {
+    position: relative;
+    font-family: var(--font-pequena);
+    font-size: 18px;
+    font-weight: 700;
+    letter-spacing: 0.05em;
+    color: var(--color-white);
+}
+
+.cta-servicos svg {
+    position: relative;
+    top: 0;
+    margin-left: 10px;
+    fill: none;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    stroke: var(--principal-color);
+    stroke-width: 2;
+    transform: translateX(-5px);
+    transition: all 0.3s ease;
+}
+
+.cta-servicos:hover:before {
+    
+}
+
+.cta-servicos:hover svg {
+}
+
+.cta-servicos:active {
+}
+
 
 /*************** SOBRE *****/
 .sobre {
@@ -611,62 +662,6 @@ a {
     font-size: clamp(1rem, 5vw, 1.4rem);
     font-family: var(--font-cards);
 }
-
-
-/*************** ALGUMA FRASE AQUI  *****/
-.free-your-mind {
-    background-color: var(--color-white);
-    width: 100vw;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 1rem 1rem;
-    font-family: var(--font-grande);
-}
-
-.container-free-your-mind {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: left;
-    justify-content: center;
-}
-
-.line-container {
-    display: flex;
-    align-items: center;
-}
-
-.line-container.center {
-    justify-content: center;
-}
-
-.line-container.right {
-    justify-content: flex-end;
-}
-
-.container-free-your-mind span {
-    color: var(--principal-color);
-    font-size: 15vw;
-}
-
-.center span {
-    text-align: center;
-}
-
-.right span {
-    text-align: right;
-}
-
-.line {
-    flex-grow: 1;
-    height: 1px;
-    background-color: var(--color-gray2);
-    margin: 0 4rem;
-}
-
 /*************** PORTFOLIO *****/
 .portfolio {
     width: 100%;
