--- a/assets/css/responsividade.css
+++ b/assets/css/responsividade.css
@@ -1,8 +1,13 @@
 /* Responsividade para iPad (tablet) */
 @media (max-width: 1024px) {
 
-    .container {
+    body {
+        overflow-x: hidden;
         padding: 0;
+        margin: 0;
+    }
+    .container {
+
     }
 
     /************************** SOBRE ***/
@@ -41,6 +46,10 @@
         height: auto;
     }
 
+    .img-sobre {
+        width: 100%;
+    }
+
     /************************** SERVIÇOS ***/
 
     .headline-servicos {
@@ -56,137 +65,10 @@
     }
 
     .titulo-servicos h1 {
-        font-size: 6rem;
+        font-size: 2rem;
     }
 
-    /************************** PORTFOLIO ***/
-
-    .container-portfolio {
-        gap: 2rem;
-        padding: 2rem 1rem;
-    }
-
-    .headline-portfolio {
-        flex-direction: column;
-        height: auto;
-    }
-
-    .headline-portfolio .titulo {
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: left;
-    }
-
-    .headline-portfolio .titulo {
-        font-size: 6rem;
-    }
-
-    .headline-portfolio .descricao {
-        width: 100%;
-        text-align: right;
-        font-size: 1.4rem;
-    }
-
-    .container-case {
-        gap: 2rem;
-    }
-
-    .case1,
-    .case3 {
-        flex-direction: column;
-        gap: 1rem;
-        height: auto;
-        justify-content: center;
-    }
-
-    .case2, 
-    .case4 {
-        flex-direction: column-reverse;
-        gap: 1rem;
-        height: auto;
-        height: auto;
-        justify-content: center;
-    }
     
-    .imagens-case {
-        width: 100%;
-        height: 60vh
-    }
-
-    .textos-case {
-        width: 100%;
-        height: 35vh;
-    }
-
-    /************************** CONTATO ***/
-    .contato {
-        padding: 0rem 1rem 2rem 1rem;
-        height: auto;
-    }
-
-    .container-contato {
-        width: 100%;
-        height: auto;
-    }
-
-    .headline-contato {
-        flex-direction: column;
-        height: auto;
-    }
-
-    .titulo-contato {
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: left;
-    }
-
-    .titulo-contato h1 {
-        font-size: 6rem;
-    }
-
-    .descricao-contato {
-        width: 100%;
-        text-align: right;
-        font-size: 1.4rem;
-    }
-
-    .descricao-contato a {
-        text-decoration: none;
-        color: var(--color-black);
-        font-size: 1.5rem;
-        letter-spacing: 1.5px;
-        line-height: 1.4;
-        font-weight: bold;
-    }
-
-
-    .conteudo-contato {
-        padding-top: 2rem;
-        flex-direction: column-reverse;
-    }
-
-    .logo-contato {
-        width: 100%;
-        justify-content: center;
-    }
-
-    .logo-contato img{
-        width: 100%;
-        max-height: 500px;
-        object-fit: cover;
-    }
-
-    .formulario-contato {
-        width: 100%;
-    }
-
-    .credits-column {
-        width: auto;
-        text-align: right;
-        margin-top: 0;
-    }
 
     /***************************************Ajustar */
 
@@ -194,11 +76,12 @@
         display: none;
     }   
     .header {        
+        max-width: 100%;
         padding: 1rem .5rem;
     }
 
     .inicio {
-        
+
     }
     
     #bg-inicio {
@@ -207,8 +90,7 @@
     
     
     .container-inicio {
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
         color: var(--color-white);  
         position: unset;
         padding: 1rem;
@@ -239,6 +121,11 @@
         width: 100vw;
         display: flex;
         opacity: 1;
+    }
+
+    .credits-column {
+        flex-direction: column;
+        gap: 1rem;
     }
 
     
