--- a/assets/css/responsividade.css
+++ b/assets/css/responsividade.css
@@ -6,9 +6,6 @@
         padding: 0;
         margin: 0;
     }
-    .container {
-
-    }
 
     /************************** SOBRE ***/
     .sobre {
@@ -79,10 +76,6 @@
         max-width: 100%;
         padding: 1rem .5rem;
     }
-
-    .inicio {
-
-    }
     
     #bg-inicio {
         display: none;
@@ -98,37 +91,38 @@
         gap: 1rem;
     }
     
-    .conteudo-inicio {
-       
-    }
-    
-    .logo-inicio {
-        
-    }
-    .logo-inicio img {
-        
-    }
-    
-    .destaque-inicio {
-        
-    }
-    
-    .paragrafo-inicio p {
-      
-    }
 
     #bg-inicio-mobile {
-        width: 100vw;
+        width: 100%;
         display: flex;
         opacity: 1;
     }
 
     .credits-column {
-        flex-direction: column;
         gap: 1rem;
     }
 
+    .footer-direitos {
+        flex-direction: column;
+        gap: .5rem
+    }
     
+    .footer-botoes-b {        
+        width: 40px;
+        height: 40px;        
+    }
+
+    #whatsappButton {      
+        width: 50px;
+        height: 50px;
+    }
+
+    #whatsappButton i {
+        font-size: 24px;
+    }
+    #desenvolvido-por {
+        font-size: clamp(.4rem, 2vw, .8rem);
+    }
 }
 
 @media (min-width: 1024px) {
