--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,8 +58,7 @@ html {
 
 body {
     background-color: var(--principal-color);
-    width: 100vw;
-    max-width: 1920px;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -81,56 +80,9 @@ a {
     
 }
 
-/*Botões fixos*/
-.fixed-button {
-    /* position: fixed;     */
-    
-}
-
-#backToTop {    
-    display: flex;
-    bottom: 50px;
-    left: 50px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); 
-}
-
-#whatsappButton {      
-    display: flex;
-    bottom: 50px;
-    right: 50px;
-    background-color: #25D366;
-    box-shadow: 0px 0px 10px rgba(0, 255, 0, 0.5); 
-    animation: pulse 2s infinite;
-    transform-origin: center;
-}
-
-#whatsappButton i {
-    font-size: 24px;
-    color: #fff;
-}
-
-.fixed-button i {
-    font-size: 24px;
-}
-
-@keyframes pulse {
-    0% {
-        transform: scale(0.9);
-        box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
-    }
-    50% {
-        transform: scale(1);
-        box-shadow: 0 0 20px rgba(0, 255, 0, 0.7);
-    }
-    100% {
-        transform: scale(0.9);
-        box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
-    }
-}
 
 .container {
     width: 100%;
-    max-width: 1400px;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -138,12 +90,16 @@ a {
     justify-content: center;
 }
 
+.container section {    
+    max-width: 1400px;
+}
+
 /*************** HEADER *****/
 .header {
     user-select: none;
     position: fixed;
     top: 0;
-    width: 100vw;
+    width: 100%;
     padding: .9rem 2.5rem;
     display: flex;
     align-items: center;
@@ -194,10 +150,6 @@ a {
     font-family: var(--font-menu);
 }
 
-/* #navigation-menu-list li:hover {
-    border-bottom: 2px solid var(--color-destaque1);
-    transition: all 0.3s ease;
-} */
 
 #navigation-menu-list li a:hover {
     color: var(--color-destaque1);
@@ -212,7 +164,7 @@ a {
 
 /* Menu */
 .menu {
-    width: 100vw;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -312,7 +264,7 @@ a {
 
 /*************** INICIO *****/
 .inicio {
-    width: 100vw; 
+    width: 100%;
     height: 100%;       
     display: flex;
     flex-direction: column;
@@ -329,7 +281,7 @@ a {
 }
 
 .container-inicio {
-    width: 30%; 
+    width: 30%;
     height: auto; 
     color: var(--color-white);
     display: flex;
@@ -445,10 +397,6 @@ a {
     font-size: clamp(1.2rem, 1.5vw + 1rem, 2rem);
 }
 
-.cta-servicos:before {
-  
-}
-
 .cta-servicos span {
     position: relative;
     font-family: var(--font-pequena);
@@ -469,16 +417,6 @@ a {
     stroke-width: 2;
     transform: translateX(-5px);
     transition: all 0.3s ease;
-}
-
-.cta-servicos:hover:before {
-    
-}
-
-.cta-servicos:hover svg {
-}
-
-.cta-servicos:active {
 }
 
 
@@ -636,43 +574,56 @@ a {
 }
 
 .card-servicos {
-    width: 300px;
-    height: 300px;
-    display: flex; 
+    max-width: 325px;
+    height: 290px;
+    display: inline-flex; 
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 1.15rem;
+    padding: .95rem 0.5rem;
     background: rgb(201,158,103);
-    background: linear-gradient(180deg, rgba(201,158,103,1) 0%, rgba(195,163,140,1) 50%, rgba(7,36,66,1) 100%);
+    background: linear-gradient(180deg, 
+        rgba(201, 158, 103, 1) 0%, 
+        rgba(201, 158, 103, 0.9) 10%, 
+        rgb(255, 215, 184) 60%, 
+        rgba(7, 36, 66, 1) 100%
+    );
     border-radius: 25px;
-    text-align: center;    
+    text-align: center;        
+    margin-bottom: .9rem;
+    /* box-shadow: 
+        5px 5px 15px rgba(201, 158, 103, 0.3), 
+        10px 10px 20px rgba(201, 158, 103, 0.15); */
 }
 
 .card-servicos-left {
-    width: 300px;
-    height: 300px;
+    max-width: 325px;
+    height: 290px;
     display: flex; 
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 1.15rem;
+    padding: .95rem 0.5rem;
     background: rgb(201,158,103);
-    background: linear-gradient(180deg, rgba(201,158,103,1) 0%, rgba(195,163,140,1) 50%, rgba(7,36,66,1) 100%);
+    background: linear-gradient(180deg, 
+        rgba(201, 158, 103, 1) 0%, 
+        rgba(201, 158, 103, 0.9) 10%, 
+        rgb(255, 215, 184) 60%, 
+        rgba(7, 36, 66, 1) 100%
+    );
     border-radius: 25px;
     text-align: center;
-}
-
-
-.card-titulo {
-    
+    margin-bottom: .9rem;
+    /* box-shadow: 
+        5px 5px 15px rgba(201, 158, 103, 0.3),
+        10px 10px 20px rgba(201, 158, 103, 0.15); */
 }
 
 .card-titulo > h1 {
-    font-size: clamp(1.5rem, 5vw, 1.8rem);
+    font-size: clamp(1.3rem, 5vw, 1.6rem);
     font-family: var(--font-cards);
     font-weight: 600;
-    margin-bottom: .85rem;
+    margin-bottom: .65rem;
 }
 .card-titulo p {    
     font-size: clamp(1rem, 5vw, 1.4rem);
@@ -684,15 +635,16 @@ a {
 .footer {
     background-color: var(--principal-color);
     width: 100%;
-    padding: 3rem 1rem;
+    padding: 3rem 1rem 1rem 1rem;
     color: var(--color-white);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 2rem;
 }
-
+.footer p {
+    font-size: clamp(.5rem, 5vw, .8rem);
+}
 .footer p a {
     text-decoration: none;
     color: var(--bg-color);
@@ -719,16 +671,16 @@ a {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    gap: 1rem;
+    gap: .5rem;
     text-align: center;
     margin-bottom: 5rem;
 }
 
 .logo-footer img {
-    width: 70%;
+    width: 65%;
 }
 .logo-footer h2 {
-    font-size: clamp(1.5rem, 2rem, 5vw);
+    font-size: clamp(1.4rem, 1.9rem, 5vw);
     font-family: var(--font-menu);
     font-weight: 400;
 }
@@ -737,8 +689,8 @@ a {
     flex: 1;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
+    align-items: left;
+    justify-content: center;
 }
 
 .logo-column {
@@ -759,20 +711,26 @@ a {
 }
 
 .social-links {
-    width: 100%;
     list-style: none;
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    align-items: left;
+    justify-content: center;
+    padding: 1rem;
 }
 
 .social-links a {
+    
     text-decoration: none;
     color: var(--color-white);
     font-size: clamp(1rem, 2rem, 5vw);
-    display: flex;
+    display: inline-flex;
     align-items: center;
     transition: color 0.3s ease;
+}
+.social-links li {
+    text-align: left;
 }
 
 .social-links a i {
@@ -785,22 +743,17 @@ a {
     color: var(--color-destaque1);
 }
 
-.footer-botoes {
-    position: relative;
-    right: 0;
-    bottom: 0;
-    width: 100%;
+.footer-direitos {
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    justify-content: space-around;
+    gap: 10rem;
 }
 
 .footer-botoes-b {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 50px;
-    height: 50px;
     border-radius: 50%;
     background-color: var(--color-white);
     color: var(--principal-color);
@@ -809,15 +762,53 @@ a {
     transition: opacity 0.5s ease, box-shadow 0.5s ease;
 }
 
-.credits-column {
-    width: 90vw;
+#backToTop {    
     display: flex;
-    flex-wrap: wrap;
+    width: 50px;
+    height: 50px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); 
+}
+
+#whatsappButton {      
+    display: flex;
+    width: 100px;
+    height: 100px;
+    background-color: #25D366;
+    box-shadow: 0px 0px 10px rgba(0, 255, 0, 0.5); 
+    animation: pulse 2s infinite;
+    transform-origin: center;
+}
+
+#whatsappButton i {
+    font-size: 48px;
+    color: #fff;
+}
+
+
+@keyframes pulse {
+    0% {
+        transform: scale(0.95);
+        box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
+    }
+    50% {
+        transform: scale(1);
+        box-shadow: 0 0 20px rgba(0, 255, 0, 0.7);
+    }
+    100% {
+        transform: scale(0.95);
+        box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
+    }
+}
+.credits-column {
+    width: 100vw;
+    display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     gap: 5rem;
     font-size: 0.9rem;    
     text-align: right;
+    padding: 0 2rem;
+    margin-bottom: 1rem;
 }
 
 .credits-column p {
@@ -833,8 +824,5 @@ a {
     }
     
 }
-@media (max-width: 600px) {
-    
-    
-}
+
 
