[UPDATE] Otimizando o site

--- a/assets/css/responsividade.css
+++ b/assets/css/responsividade.css
@@ -1,142 +1,1 @@
-/* Responsividade para iPad (tablet) */
-@media (max-width: 1024px) {
-
-    body {
-        overflow-x: hidden;
-        padding: 0;
-        margin: 0;
-    }
-
-    /************************** SOBRE ***/
-    .sobre {
-        height: auto;
-    }
-
-    .container-sobre {
-        height: auto;
-    }
-    
-    .headline-sobre {
-        height: auto;
-        position: relative;
-    }
-
-    .conteudo-sobre {
-        flex-direction: column;
-        height: auto;
-        gap: 1.1rem;
-    }
-
-    #conteudo-sobre-02 {
-        flex-direction: column-reverse;
-        height: auto;
-        gap: 1.1rem;
-    }
-
-    .left-sobre {
-        width: 100%;
-        height: auto;
-    }
-
-    .right-sobre {
-        width: 100%;
-        height: auto;
-    }
-
-    .img-sobre {
-        width: 100%;
-    }
-
-    /************************** SERVIÇOS ***/
-
-    .headline-servicos {
-        flex-direction: column;
-        height: auto;
-    }
-
-    .titulo-servicos {
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: left;
-    }
-
-    .titulo-servicos h1 {
-        font-size: 2rem;
-    }
-
-    
-
-    /***************************************Ajustar */
-
-    #navigation-menu-wrapper {
-        display: none;
-    }   
-    .header {        
-        max-width: 100%;
-        padding: 1rem .5rem;
-    }
-    
-    #bg-inicio {
-        display: none;
-    }
-    
-    
-    .container-inicio {
-        width: 100%;
-        color: var(--color-white);  
-        position: unset;
-        padding: 1rem;
-        margin: 0;
-        gap: 1rem;
-    }
-    
-
-    #bg-inicio-mobile {
-        width: 100%;
-        display: flex;
-        opacity: 1;
-    }
-
-    .credits-column {
-        gap: 1rem;
-    }
-
-    .footer-direitos {
-        flex-direction: column;
-        gap: .5rem
-    }
-    
-    .footer-botoes-b {        
-        width: 40px;
-        height: 40px;        
-    }
-
-    #whatsappButton {      
-        width: 50px;
-        height: 50px;
-    }
-
-    #whatsappButton i {
-        font-size: 24px;
-    }
-    #desenvolvido-por {
-        font-size: clamp(.4rem, 2vw, .8rem);
-    }
-}
-
-@media (min-width: 1024px) {
-    .conteudo-skills {
-        grid-template-columns: repeat(4, 1fr);
-    }
-
-    #menu-mobile {
-        display: none;
-    }
-
-    #bg-inicio-mobile {
-     display: none;   
-    }
-    
-
-}
+@media (max-width:1024px){.logo img{width:125px;height:auto}.container-sobre,.sobre{height:auto}.headline-sobre{height:auto;position:relative}.conteudo-sobre{flex-direction:column;height:auto;gap:1.1rem}#conteudo-sobre-02{flex-direction:column-reverse;height:auto;gap:1.1rem}.left-sobre,.right-sobre{width:100%;height:auto}.img-sobre{width:100%}.headline-servicos{flex-direction:column;height:auto}.titulo-servicos{width:100%;display:flex;align-items:center;justify-content:left}.titulo-servicos h1{font-size:2rem}#bg-inicio,#navigation-menu-wrapper{display:none}.header{max-width:100%;padding:1rem .5rem}.container-inicio{width:100%;color:var(--color-white);position:unset;padding:1rem;margin:0;gap:1rem}#bg-inicio-mobile{width:100%;display:flex;opacity:1}.credits-column{gap:1rem}.footer-direitos{flex-direction:column;gap:.5rem}.footer-botoes-b{width:40px;height:40px}#whatsappButton{width:50px;height:50px}#whatsappButton i{font-size:24px}#desenvolvido-por{font-size:clamp(.4rem, 2vw, .8rem)}}@media (min-width:1024px){.conteudo-skills{grid-template-columns:repeat(4,1fr)}#bg-inicio-mobile,#menu-mobile{display:none}}
