--- a/assets/css/responsividade.css
+++ b/assets/css/responsividade.css
@@ -2,6 +2,8 @@
 @media (min-width: 481px) and (max-width: 767px) {
     .inicio {
         margin-top: 80px;
+        background-image: url('../img/bg-vertical-md-darken.webp');
+       justify-content: flex-start;
     }
 
     .logo {
@@ -9,35 +11,23 @@
     }
     .container-inicio {
         width: 100%;
-        height: 65vh;
         color: var(--color-white);
-        position: relative;
-        top: 0;
         margin: 0;
-        background-image: url('../img/bg-vertical-md-darken.webp');
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        justify-content: flex-start;
+	margin-top: .9rem;
     }
     .conteudo-inicio {
-        display: flex;
-        width: 100%;
-        position: relative;
-        top: 30px;
-        align-items: center;
-        justify-content: center;
+	
     }
     .logo-inicio {
         display: flex;
         justify-content: center;
     }
     .logo-inicio img {
-        width: 70%;
+        width: 60%;
     }
     .container-sobre,
     .sobre {
-        height: auto;
+        height: 100vh;
     }
     .headline-sobre {
         height: auto;
@@ -49,13 +39,20 @@
         height: auto;
         padding: 0;
     }
+    .container-sobre {
+	}
+    .conteudo-sobre {
+         flex-wrap: wrap;
+	height: 100vh;
+	}
+    #conteudo-sobre-02 {flex-direction: column-reverse}
     .img-sobre, .img-sobre-02 {
-        width: 100%;
+        width: clamp(70%, 10vw, 100%);
     }
     .textos-sobre p, 
     .textos-sobre-2 > p, .textos-sobre p > span,
     .textos-sobre-2 > p > span {
-        font-size: 1.5rem;
+        font-size: clamp(1rem, 3vw,1.5rem);
     }
     .headline-servicos {
         flex-direction: column;
@@ -83,11 +80,6 @@
 
     .card-titulo > h1 {
         margin-bottom: 1.5rem;    
-    }
-    #bg-inicio-mobile {
-        width: 100%;
-        display: flex;
-        opacity: 1;
     }
     .credits-column {
         gap: 1rem;
@@ -182,6 +174,7 @@
     .textos-sobre-2 > p > span {
         font-size: 1.5rem;
     }
+
     .headline-servicos {
         flex-direction: column;
         height: auto;
@@ -244,7 +237,7 @@
     
 /* Laptops and Desktops */
 @media (min-width: 1024px) {
-    #bg-inicio-mobile, .menu, .menu-aberto {
+    .menu, .menu-aberto {
         display: none;
     }
 }
