--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,9 +94,7 @@ body {
   display: flex;
   width: 100%;
 }
-.container section {
-  max-width: 1400px;
-}
+
 .header {
   user-select: none;
   position: fixed;
@@ -110,6 +108,7 @@ body {
   box-shadow: 0 4px 20px 2px rgba(7, 36, 66, 0.5);
 }
 .logo {
+  display: none;
   width: 100%;
   height: auto;
   padding-left: 1.5rem;
@@ -124,6 +123,7 @@ body {
   align-self: right;
 }
 #navigation-menu {
+  display: none;
   justify-content: right;
   padding: 1rem;
 }
@@ -234,31 +234,34 @@ body {
 }
 .container-inicio,
 .inicio {
-  flex-direction: column;
   display: flex;
+  flex-direction: column;
 }
 .inicio {
   width: 100%;	
   height: 100vh;
   justify-content: center;
-  background-color: var(--bg-color);
-  background-image: url('../img/bg-inicio.webp');
+  background-image: url('../img/bg-vertical-md-darken.webp');  
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   align-items: flex-end;
+  margin-top: 4rem;
+  justify-content: flex-start;
 }
 
 .container-inicio {
-  width: 30%;
+  width: 100%;
   color: var(--color-white);
   align-items: center;
   justify-content: center;
-  margin-right: 10%;
+  margin-right: 10%;  
+  margin: 0;
+  margin-top: 1.5rem;
 }
 .conteudo-inicio {
-  width: 100%;
+  width: 90%;
   height: auto;
   display: flex;
   flex-direction: column;
@@ -267,15 +270,18 @@ body {
   text-align: center;
   gap: 0.5rem;
 }
-.paragrafo-inicio p {
-  font-size: clamp(.8rem, 1.5rem, 4vw);
+
+.paragrafo-inicio {
+  font-size: clamp(.7rem, 1.5rem, 3.5vw);
   color: var(--principal-color);
   font-family: var(--font-menu);
   font-weight: 600;
 }
-
-.textos-sobre p,
-.textos-sobre-2 > p {
+.logo-inicio {
+  width: 80%;
+} 
+.textos-sobre,
+.textos-sobre-2 {
   line-height: 1.4;
   letter-spacing: 1.5px;
   text-align: justify;
@@ -283,6 +289,7 @@ body {
 .container-servicos,
 .servicos,
 .sobre {
+  display: flex;
   background-color: var(--principal-color);
 }
 .sobre {
@@ -301,40 +308,42 @@ body {
   align-items: center;
 }
 .conteudo-sobre {
-  width: 100%;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
   padding: 0.5rem;
 }
-.left-sobre,
-.right-sobre {
- width: 48%;
-  display: flex;
-  padding: 0.5rem;
-}
-.left-sobre {
-  color: var(--color-white);
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+
+.conteudo-sobre > *  {
+  flex: 1 1 250px;             
 }
 
-.textos-sobre p, 
-.textos-sobre-2 > p, .textos-sobre p > span,
-.textos-sobre-2 > p > span {
-    font-size: 2.5rem;
+.left-sobre, .right-sobre {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+}
+
+#conteudo-sobre-02 {
+  flex-direction: column-reverse;
+}
+
+.textos-sobre, 
+.textos-sobre-2, .textos-sobre > span,
+.textos-sobre-2 > span {
+    font-size: 1.5rem;
     color: var(--color-destaque1);
 }
 
-.textos-sobre p > span {
+.textos-sobre > span {
   color: #e4ded7;
   font-weight: 900;
 }
 .footer p a:hover,
 .social-links a:hover,
-.textos-sobre-2 > p > span {
+.textos-sobre-2 > span {
   color: var(--color-destaque1);
 }
 .right-sobre {
@@ -342,59 +351,45 @@ body {
   align-items: center;
 }
 
-.textos-sobre-2 > p {
+.textos-sobre-2 {
   color: #e4ded7;
 }
-.textos-sobre-2 > p > span {
+.textos-sobre-2> span {
   font-weight: 900;
 }
-.img-sobre,
-.img-sobre-02 {
-  width: 80%;
+.img-sobre, .img-sobre-02 {
+  max-width: 100%;
   height: auto;
+  display: block;
 }
-
 .img-sobre-02 {
-  width: 100%;
-  height: auto;
   border-radius: 30px;
-}
+} 
 .servicos {
   width: 100%;
   justify-content: center;
-  padding: 2rem 1rem;
+  padding: 2rem .5rem;
   margin-bottom: 5rem;
 }
 .container-servicos {
   width: 100%;
   max-width: 1400px;
   height: auto;
-  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
 }
 .headline-servicos {
   width: 100%;
-  justify-content: center;
-  align-items: center;
   display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 .titulo-servicos {
-  width: 100%;
-  height: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0 auto;
-}
-.titulo-servicos h1 {
   color: #e4ded7;
-  width: 100%;
   font-size: clamp(3rem, 5vw, 5vw);
   font-weight: lighter;
   font-family: var(--font-grande);
-  text-align: left;
 }
 .footer,
 .social-links a {
@@ -410,19 +405,19 @@ body {
   gap: 1rem;
   padding: 2rem 0;
 }
+
 .card-servicos {
-    width: calc(33.33% - 2rem); /* Tamanho proporcional com espaço para gap */
-    max-width: 400px; /* Limite máximo para evitar cartões muito largos */
-    min-width: 250px; /* Tamanho mínimo */
+    max-width: 350px; /* Limite máximo para evitar cartões muito largos */
+    min-width: 200px; /* Tamanho mínimo */
     height: 300px;
+    display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
     padding: 1.5rem 1rem;
     border-radius: 49px;
     margin-bottom: 0.9rem;
     text-align: center;
-    display: inline-flex;
-    align-items: center;
-    justify-content: space-between;
     background: linear-gradient(
         180deg,
         #c99e67 0,
@@ -432,6 +427,10 @@ body {
     );
 }
 
+
+.card-servicos > *  {
+  flex: 1 1 350px;             
+}
 .container-footer,
 .footer {
   flex-direction: column;
@@ -442,8 +441,9 @@ body {
   font-size: 1.9rem;
   font-family: var(--font-cards);
   font-weight: 600;
-  margin-bottom: 0.65rem;
+  margin-bottom: 1.5rem;
 }
+
 .card-titulo p {
   font-size: clamp(1.5rem, 5vw, 1.9rem);
   font-family: var(--font-cards);
@@ -529,11 +529,15 @@ body {
 }
 .footer-direitos {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  gap: 10rem;
+  gap: .5rem;
+  text-align: center;
 }
 .footer-botoes-b {
+  width: 40px;
+  height: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -552,16 +556,24 @@ body {
 }
 #whatsappButton {
   display: flex;
-  width: 100px;
-  height: 100px;
+  width: 50px;
+  height: 50px;
   background-color: #25d366;
   box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
   animation: 2s infinite pulse;
   transform-origin: center;
 }
 #whatsappButton i {
-  font-size: 48px;
+  font-size: 24px;
   color: #fff;
+}
+
+#desenvolvido-por {
+  font-size: clamp(0.4rem, 2vw, 0.8rem);
+}
+
+.logo-footer img {
+  width: 100%;
 }
 @keyframes pulse {
   0%,
@@ -580,7 +592,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 5rem;
+  gap: 1rem;
   font-size: 0.9rem;
   text-align: right;
   padding: 0 2rem;
@@ -615,120 +627,5 @@ body {
     stroke: var(--principal-color);
   }
 
-@media (max-width: 480px) {
- .inicio {
-        margin-top: 4rem;
-        background-image: url('../img/bg-vertical-md-darken.webp');
-       justify-content: flex-start;
-    }
 
-    .logo {
-        display: none;
-    }
-    .container-inicio {
-        width: 100%;
-        color: var(--color-white);
-        margin: 0;
-	margin-top: 1.5rem;
-    }
-    .conteudo-inicio {
-	
-    }
-    .logo-inicio {
-        width: 80%;
-    }
-    .logo{
-        display: none;
-    }
-    
-    .container-sobre,
-    .sobre {
-        height: auto;
-    }
-    .headline-sobre {
-        height: auto;
-        position: relative;
-    }
-    .conteudo-sobre {
-        flex-direction: column;
-        height: auto;
-        gap: 1.1rem;
-    }
-    #conteudo-sobre-02 {
-        flex-direction: column-reverse;
-        height: auto;
-        gap: 1.1rem;
-    }
-    .left-sobre,
-    .right-sobre {
-        width: 100%;
-        height: auto;
-    }
-    .textos-sobre p, 
-    .textos-sobre-2 > p, .textos-sobre p > span,
-    .textos-sobre-2 > p > span {
-        font-size: 1.25rem;
-    }
-    .img-sobre, .img-sobre-02 {
-        width: 90%;
-    }
-    .headline-servicos {
-        flex-direction: column;
-        height: auto;
-    }
-    .titulo-servicos {
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: left;
-    }
-    #bg-inicio,
-    #navigation-menu-wrapper {
-        display: none;
-    }
-    .header {
-        max-width: 100%;
-        padding: 1rem 0.5rem;
-    }
-    .card-servicos {
-        width: 80%;
-        height: 300px;
-        padding: 1.5rem 1rem;
-        }
-
-    .card-titulo > h1 {
-        margin-bottom: 1.5rem;    
-    }
-    #bg-inicio-mobile {
-        width: 100%;
-        display: flex;
-        opacity: 1;
-    }
-    .credits-column {
-        gap: 1rem;
-    }
-    .footer-direitos {
-        flex-direction: column;
-        gap: 0.5rem;
-        text-align: center;
-    }
-    .footer-botoes-b {
-        width: 40px;
-        height: 40px;
-    }
-    #whatsappButton {
-        width: 50px;
-        height: 50px;
-    }
-    #whatsappButton i {
-        font-size: 24px;
-    }
-    #desenvolvido-por {
-        font-size: clamp(0.4rem, 2vw, 0.8rem);
-    }
-
-    .logo-footer img {
-        width: 100%;
-    }
-}
         
