--- a/assets/css/responsividade.css
+++ b/assets/css/responsividade.css
@@ -31,43 +31,32 @@
     
 /* Laptops and Desktops */
 @media (min-width: 1024px) {
+	.header{}
+	.logo {display: flex;max-width: 700px;}
+	#navigation-menu-wrapper {display:flex;max-width: 700px;}
+    #navigation-menu {
+  		display: flex;
+	}	
     .container section {
-        max-width: 1400px;
+        
       }
     .inicio {
-        width: 100%;	
-        height: 100vh;
         justify-content: center;
         background-image: url('../img/bg-inicio.webp');  
         
       }
 
     .container-inicio {
-        width: 100%;
-        color: var(--color-white);
-        align-items: center;
-        justify-content: center;
-        margin-right: 10%;  
-        margin: 0;
-        margin-top: 1.5rem;
+        width: 50%;
       }
 
     .conteudo-inicio {
-        width: 100%;
-        height: auto;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        gap: 0.5rem;
+        
     }
 
     .textos-sobre p,
     .textos-sobre-2 > p {
-    line-height: 1.4;
-    letter-spacing: 1.5px;
-    text-align: justify;
+    	
     }
     .container-servicos,
     .servicos,
@@ -85,18 +74,13 @@
     .container-sobre {
     width: 100%;
     height: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+   
     }
     .conteudo-sobre {
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
+    	width: 100%;
+    	height: auto;
+	gap: 1.5rem;
+    
     }
 
     .left-sobre {
@@ -107,20 +91,17 @@
       }
       
       #conteudo-sobre-02 {
-        flex-direction: column-reverse;
-        height: auto;
+        flex-direction: row;
       }
       
-      .textos-sobre p, 
-      .textos-sobre-2 > p, .textos-sobre p > span,
-      .textos-sobre-2 > p > span {
+      .textos-sobre, 
+      .textos-sobre-2, .textos-sobre> span,
+      .textos-sobre-2 > span {
           font-size: 2.5rem;
-          color: var(--color-destaque1);
       }
       
-      .textos-sobre p > span {
+      .textos-sobre > span {
         color: #e4ded7;
-        font-weight: 900;
       }
       .footer p a:hover,
       .social-links a:hover,
@@ -132,7 +113,7 @@
         align-items: center;
       }
       
-      .textos-sobre-2 > p {
+      .textos-sobre-2 {
         color: #e4ded7;
       }
       .textos-sobre-2 > p > span {
@@ -140,13 +121,11 @@
       }
       .img-sobre,
       .img-sobre-02 {
-        width: 80%;
-        height: auto;
+        width: 90%;
+	height: auto;
       }
       
       .img-sobre-02 {
-        width: 100%;
-        height: auto;
         border-radius: 30px;
       }
       .container-servicos {
