--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,6 +87,9 @@ body {
   align-items: center;
   justify-content: center;
 }
+.container section {
+  max-width: 1400px;
+}
 .header,
 .menu {
   height: auto;
@@ -100,7 +103,7 @@ body {
   position: fixed;
   top: 0;
   padding: 0.9rem 2.5rem;
-  justify-content: space-between;
+  justify-content: center;
   z-index: 99;
   transition: top 0.3s ease-in-out;
   backdrop-filter: blur(15px);
@@ -118,13 +121,12 @@ body {
   height: auto;
 }
 #navigation-menu-wrapper {
+	display: none;
   width: 100%;
   height: auto;
-  align-self: right;
+  justify-content: right;
 }
 #navigation-menu {
-  display: none;
-  justify-content: right;
   padding: 1rem;
 }
 #navigation-menu-list {
@@ -240,7 +242,6 @@ body {
 .inicio {
   width: 100%;	
   height: 100vh;
-  justify-content: center;
   background-image: url('../img/bg-vertical-md-darken.webp');  
   background-attachment: fixed;
   background-size: cover;
@@ -255,8 +256,7 @@ body {
   width: 100%;
   color: var(--color-white);
   align-items: center;
-  justify-content: center;
-  margin-right: 10%;  
+  justify-content: center; 
   margin: 0;
   margin-top: 1.5rem;
 }
